Fixed some layout issues

--- a/forms-flow-ai/forms-flow-web/src/components/ServiceFlow/ServiceFlow.scss
+++ b/forms-flow-ai/forms-flow-web/src/components/ServiceFlow/ServiceFlow.scss
@@ -151,6 +151,20 @@
   border-left: 4px solid #155cb5;
   border-radius: 4px;
 }
+.clickable2 {
+  cursor: pointer;
+  margin-bottom: 10px !important;
+  // margin-right: -10px;
+  padding: 10px;
+  border-left: 4px solid transparent;
+  background-color: white;
+}
+.clickable2:hover {
+  // margin-bottom: 10px !important;
+  // padding: 10px;
+  border-left: 4px solid #155cb5;
+
+}
 .selected {
   margin-bottom: 10px !important;
   padding: 10px;
@@ -172,7 +186,7 @@
   margin: 10px 0;
   font-size: 14px;
   font-weight: bold;
-  height: 71px;
+  // height: 71px;
   position: relative;
 }
 .task-header {
